--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,11 @@
               <ul class="cart__order-price">
                 <li class="cart__order-subtotal">
                   <span class="cart__order-price-name">Subtotal:</span>
-                  <span class="cart__order-price-sum">$0</span>
+                  <span class="cart__order-price-sum"><strong>$0</strong></span>
                 </li>
                 <li class="cart__order-delivery">
                   <span class="cart__order-price-name">Delivery:</span>
-                  <span class="cart__order-price-sum">$0</span>
+                  <span class="cart__order-price-sum"><strong>$0</strong></span>
                 </li>
                 <li class="cart__order-total">
                   <span class="cart__order-price-name"><strong>Total:</strong></span>
