--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="./vendor/range-slider.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -21,6 +23,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -62,6 +65,133 @@
   </header>
 
   <div id="pages">
+    <section id="home">
+      <div class="home_main container">
+        <div class="home-row">
+          <div class="home-order box">
+            <div class="home-item">
+              <a href="#order" class="btn">
+                <h2 class="home-item-title">ORDER ONLINE<h2>
+              </a>
+            </div>
+          </div>
+          <div class="home-booking box">
+            <div class="home-item">
+              <a href="#booking" class="btn">
+                <h2 class="home-item-title">BOOK A TABLE</h2>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="home-hours box">
+          <div class="home-item">
+              <a href="#hours" class="btn">
+              <h2 class="home-item-title">OPENING HOURS<h2>
+              </a>
+              <p>TUE-SUN, 12PM-12AM</p>
+          </div>
+        </div>
+        <div class="main-carousel container" data-flickity='{ "cellAlign": "left", "contain": true, "prevNextButtons": false, "autoPlay": 3000, "pageDots": false}'>
+          <div class="carousel-cell">
+            <div class="image">
+              <img src="/images/assets/pizza-3.jpg" />
+            </div>
+            <div class="text">
+              <p>AMAZING SERVICE</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim
+                ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                ut aliquip ex ea commodo consequat.
+              </p>
+              <p>-Meredith Grey</p>
+            </div>
+          </div>
+          <div class="carousel-cell">
+            <div class="image">
+              <img src="/images/assets/pizza-4.jpg" />
+            </div>
+            <div class="text">
+              <p>BEST MEAL EVER</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim
+                ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                ut aliquip ex ea commodo consequat.
+              </p>
+              <p>-Cristina Yang</p>
+            </div>
+          </div>
+          <div class="carousel-cell">
+            <div class="image">
+              <img src="/images/assets/pizza-5.jpg" />
+            </div>
+            <div class="text">
+              <p>YOU'LL WANT TO COME BACK</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim
+                ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                ut aliquip ex ea commodo consequat.
+              </p>
+              <p>-Miranda Bailey</p>
+            </div>
+          </div>
+        </div>
+        <div class="gallery">
+          <div class="gallery-wrapper container">
+            <div class="gallery-row">
+              <div class="gallery-image">
+                <img src="images/assets/pizza-4.jpg" alt="pizza-4">
+                <div class="gallery-icon">
+                  <a class="heart" href="#"><i class="fas fa-heart"></i></a>
+                  <a class="share" href="#"><i class="fas fa-share-alt"></i></a>
+                </div>
+              </div>
+              <div class="gallery-image">
+                <img src="images/assets/pizza-5.jpg" alt="pizza-5">
+                <div class="gallery-icon">
+                  <a class="heart" href="#"><i class="fas fa-heart"></i></a>
+                  <a class="share" href="#"><i class="fas fa-share-alt"></i></a>
+                </div>
+              </div>
+              <div class="gallery-image">
+                <img src="images/assets/pizza-6.jpg" alt="pizza-6">
+                <div class="gallery-icon">
+                  <a class="heart" href="#"><i class="fas fa-heart"></i></a>
+                  <a class="share" href="#"><i class="fas fa-share-alt"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="gallery-row">
+              <div class="gallery-image">
+                <img src="images/assets/pizza-7.jpg" alt="pizza-7">
+                <div class="gallery-icon">
+                  <a class="heart" href="#"><i class="fas fa-heart"></i></a>
+                  <a class="share" href="#"><i class="fas fa-share-alt"></i></a>
+                </div>
+              </div>
+              <div class="gallery-image">
+                <img src="images/assets/pizza-8.jpg" alt="pizza-8">
+                <div class="gallery-icon">
+                  <a class="heart" href="#"><i class="fas fa-heart"></i></a>
+                  <a class="share" href="#"><i class="fas fa-share-alt"></i></a>
+                </div>
+              </div>
+              <div class="gallery-image">
+                <img src="images/assets/pizza-9.jpg" alt="pizza-9">
+                <div class="gallery-icon">
+                  <a class="heart" href="#"><i class="fas fa-heart"></i></a>
+                  <a class="share" href="#"><i class="fas fa-share-alt"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <a target="-blank" href="https://www.instagram.com/">View more on Instagram</a>
+        </footer>
+      </div>
+    </section>
+
+
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
@@ -243,9 +373,12 @@
       </article> <!-- .product -->
     </script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <script src="./vendor/range-slider.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="vendor/range-slider.min.js"></script>
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <script src="js/app.js" type="module"></script>
 </body>
 </html>
