Make some changes for better likeness to gif

--- a/src/index.html
+++ b/src/index.html
@@ -85,10 +85,8 @@
         </div>
         <div class="home-hours box">
           <div class="home-item">
-              <a href="#hours" class="btn">
-              <h2 class="home-item-title">OPENING HOURS<h2>
-              </a>
-              <p>TUE-SUN, 12PM-12AM</p>
+              <h2 class="home-item-title">OPENING HOURS:<h2>
+              <p>TUE - SUN, 12PM - 12AM</p>
           </div>
         </div>
         <div class="main-carousel container" data-flickity='{ "cellAlign": "left", "contain": true, "prevNextButtons": false, "autoPlay": 3000, "pageDots": false}'>
