--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <link rel="stylesheet" href="./vendor/range-slider.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -89,7 +89,7 @@
               <p>TUE - SUN, 12PM - 12AM</p>
           </div>
         </div>
-        <div class="main-carousel container" data-flickity='{ "cellAlign": "left", "contain": true, "prevNextButtons": false, "autoPlay": 3000, "pageDots": false}'>
+        <div class="main-carousel container" data-flickity='{ "cellAlign": "left", "contain": true, "prevNextButtons": false,"autoPlay": 3000, "pageDots": true }'>
           <div class="carousel-cell">
             <div class="image">
               <img src="/images/assets/pizza-3.jpg" />
